@@ -1,7 +1,9 @@
 package faculdade.donaduzzi.folksflowbackend.services;
 
-import faculdade.donaduzzi.folksflowbackend.model.DTO.CompanyRequest;
-import faculdade.donaduzzi.folksflowbackend.model.DTO.CompanyResponse;
+import faculdade.donaduzzi.folksflowbackend.infra.exceptions.BusinessException;
+
+import faculdade.donaduzzi.folksflowbackend.model.dto.CompanyRequest;
+import faculdade.donaduzzi.folksflowbackend.model.dto.CompanyResponse;
 import faculdade.donaduzzi.folksflowbackend.model.entities.Company;
 import faculdade.donaduzzi.folksflowbackend.repository.CompanyRepository;
 import lombok.RequiredArgsConstructor;
@@ -11,11 +13,12 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class CompanyService {
+
+    private static final String COMPANY_NOT_FOUND = "Company not found";
 
     private final CompanyRepository companyRepository;
     private final FileStorageService fileStorageService;
@@ -23,13 +26,13 @@ public class CompanyService {
     public List<CompanyResponse> findAll() {
         return companyRepository.findAll().stream()
                 .map(CompanyResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public CompanyResponse findById(Integer id) {
         return companyRepository.findById(id)
                 .map(CompanyResponse::fromEntity)
-                .orElseThrow(() -> new RuntimeException("Company not found"));
+                .orElseThrow(() -> new BusinessException(COMPANY_NOT_FOUND));
     }
 
     public Company findEntityById(Integer id) {
@@ -58,7 +61,7 @@ public class CompanyService {
     @Transactional
     public CompanyResponse update(Integer id, CompanyRequest request) {
         Company company = companyRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Company not found"));
+                .orElseThrow(() -> new BusinessException(COMPANY_NOT_FOUND));
         
         company.setName(request.getName());
         company.setEmail(request.getEmail());
@@ -86,7 +89,7 @@ public class CompanyService {
     @Transactional
     public void delete(Integer id) {
         Company company = companyRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Company not found"));
+                .orElseThrow(() -> new BusinessException(COMPANY_NOT_FOUND));
         company.setIsActive(false);
         company.setUpdatedAt(LocalDateTime.now());
         companyRepository.save(company);
